# Abstract-Interpreter-for-Irregular-Parallelism

./: README.md
PlayAnalyser/: PlayAnalyzer.cabal  README.md  README.txt  week2.cabal
PlayAnalyser/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
PlayAnalyser/dist-newstyle/packagedb/ghc-8.8.4/: package.cache  week2-1.0.0.0-inplace.conf
PlayAnalyser/dist-newstyle/packagedb/ghc-9.12.1/: PlayAnalyzer-1.0.0.0-inplace.conf  package.cache  week2-1.0.0.0-inplace.conf
PlayAnalyser/src/APL/: AST.hs  Absin.hs  Eval.hs  Eval_Tests.hs
RangeAnalyzer/: .gitignore  README.txt  range.cabal  runtests.hs
RangeAnalyzer/src/APL/: AST.hs  Absin.hs  Eval.hs  Eval_Tests.hs
