cabal-version:      3.0
name:               PlayAnalyzer
version:            1.0.0.0
build-type:         Simple

common common
    default-language: Haskell2010
    ghc-options: -Wall

library
    import: common
    hs-source-dirs: src
    build-depends:
        base
      , tasty
      , tasty-hunit
    exposed-modules:
        APL.AST
        APL.Eval
        APL.Eval_Tests
        APL.Absin

test-suite week2-test
    import: common
    type: exitcode-stdio-1.0
    main-is: runtests.hs
    build-depends:
        base
      , tasty
      , PlayAnalyzer
